--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | About</title>
+    <title>SS YENUMULA College Of Engineering And Technology | About</title>
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="https://pbs.twimg.com/profile_images/826012789361610752/GCKMBPo7_400x400.jpg">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,12 +22,12 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                                <a href="index.html" title=""><img src="https://pbs.twimg.com/profile_images/826012789361610752/GCKMBPo7_400x400.jpg" alt="logo"></a>
                             </div>
                             <div class="name">
-                                <a href="index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                <a href="index.html" title="SS YENUMULA College Of Engineering And Technology">
+                                    <h5><marquee><b>SS YENUMULA College Of Engineering And Technology</b></marquee></h5>
+                                    <h5 class="primary-color">Bapatla</h5>
                                 </a>
                             </div>
                         </div>
@@ -83,12 +83,18 @@
                                             <ul class="dropdown-menu">
                                                 <li><a href="btech_cse.html">CSE</a></li>
                                                 <li><a href="btech_it.html">IT</a></li>
+                                                <li><a href="btech_me.html">ME</a></li>
+                                                <li><a href="btech_ece.html">ECE</a></li>
+                                                <li><a href="btech_eee.html">EEE</a></li>
+                                                <li><a href="btech_civil.html">CIVIL</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown-submenu">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">M.Tech</a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="mtech_cse.html">CSE</a></li>
+                                                <li><a href="btech_me(thermal).html">ME(THERMAL)</a></li>
+                                                <li><a href="btech_ece.html">ECE</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="phd.html">Ph.D</a></li>
@@ -136,19 +142,20 @@
         <div class="contents-wrapper">
             <!-- Contents starts here -->
             <div class="content">
-                <h1>About us</h1>
-                <p>Indian Institute of Information Technology Vadodara (IIIT-V) is set up by the Ministry of Human Resource Development (MHRD), Government Of India under Public Private Partnership (PPP) model. The partners in this project are Government Of India, Government of Gujarat, Gujarat Energy Research and Management Institute, Gujarat State Fertilizers and Chemicals and Tata Consultancy Services. The Institute was established in the year 2013. DA-IICT Gandhinagar has been entrusted the responsibility of mentoring IIIT Vadodara. At present, IIIT-V is operating from its temporary premises at Government Engineering College (Gandhinagar) till the time its new campus is made operational at Vadodara, Gujarat.</p>
-                <p>Indian Institute of Information Technology, Vadodara - is established to cater to the emerging needs and opportunities and meet economic challenges being thrown by the incessant IT revolution. It is setup as a Not for Profit Public Private Partnership (PPP) model. It is a major initiative taken by Government of Gujarat to harness the multifarious dimension of IT Industry. The Government of Gujarat has lent support to the Institute by providing 50 acres of land and Building. It is aimed at providing future candidates who shall become a precursor in the field of IT. A Governing Council consisting of distinguished people from academia, industry and government preside over the governance of the institute.</p>
-                <p>The Institute aims at evolving strong research programmes in a plethora of areas where IT shall provide a common link with profound emphasis on development of technology and its application.</p>
+                <h1><u>* About Us *</u></h1>
+                <p>SS YENUMULA College Of Engineering & Technology  is located in Buddam, Bapatla, Andhra Pradesh. </p>
+                <p>SS YENUMULA College Of Engineering & Technology - It was established in 1998 by The SS YENUMULA Educational Society. The college is affiliated with JNTU, Kakinada. "This Is The First Engineering Autonomous College in bapatla district.</p>
+                <p>The college offers undergraduate Courses like Bachelor of Technology programmes for mechanical engineering(ME), electrical and electronics engineering(EEE), electronics and communications engineering(ECE), Computer Science and Engineering (CSE), Civil Engineering (CE) and Information Technology(IT)..</p>
             </div>
         </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
-                <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+                <span class="logo"><img src="https://pbs.twimg.com/profile_images/826012789361610752/GCKMBPo7_400x400.jpg
+                    " alt=""></span>
                 <div class="row">
                     <div class="col-sm-4 address">
-                        <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028
+                        <strong>Address : </strong>Near By Buddampudi; Guntur Dist. Schools in Buddam. Mpps Buddm. Address : buddam , karlapalem , guntur , Andhra Pradesh . PIN- 522111
                     </div>
                     <div class="col-sm-4 links">
                         <div>
