--- a/academic_council.html
+++ b/academic_council.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT Vadodara | Academic Council</title>
+    <title>SS YENUMULA | Academic Council</title>
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="https://pbs.twimg.com/profile_images/826012789361610752/GCKMBPo7_400x400.jpg">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,12 +22,12 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                                <a href="index.html" title=""><img src="https://pbs.twimg.com/profile_images/826012789361610752/GCKMBPo7_400x400.jpg" alt="logo"></a>
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                    <h5><marquee>SS YENUMULA College Of Engineering & Technology</marquee></h5>
+                                    <h5 class="primary-color">Bapatla</h5>
                                 </a>
                             </div>
                         </div>
@@ -154,72 +154,72 @@
                         <tr>
                             <td>1</td>
                             <td>
-                                Prof R. Nagaraj,
-                                <br/>Director DA-IICT
+                                 prof Y.Shiva Seshu,
+                                <br/>Director of College
                             </td>
                             <td>Chairman</td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>
-                                Prof G Sivakumar,
+                                Prof D Naresh Babu,
                                 <br/>CSE, IIT-Bombay
                             </td>
-                            <td>Member</td>
+                            <td>Admission Department</td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>
-                                Prof C Pandu Rangan,
-                                <br/>CSE, IIT-Madras
+                                Prof B Chandra sekhar,
+                                <br/>CSE, <IIT-Bangalore>
                             </td>
-                            <td>Member</td>
+                            <td>HR</td>
                         </tr>
                         <tr>
                             <td>4</td>
                             <td>
-                                Prof Surendra Prasad,
-                                <br/>IIT-Delhi
+                                Prof Hari Krishna,
+                                <br/><IIT-Thirupathi>
                             </td>
-                            <td>Member</td>
+                            <td>HOD</td>
                         </tr>
                         <tr>
                             <td>5</td>
                             <td>
-                                Prof Suman Mitra
-                                <br/>DA-IICT
+                                Prof Sai Lavanya,
+                                <br/><DA-NIT>
                             </td>
-                            <td>Member</td>
+                            <td>HOD</td>
                         </tr>
                         <tr>
                             <td>6</td>
                             <td>
-                                Prof Anish Mathuria,
-                                <br/>DA-IICT
+                                Prof Rajendra Prasad,
+                                <br/>IIT-Bombay
                             </td>
-                            <td>Member</td>
+                            <td>HOD</td>
                         </tr>
                         <tr>
                             <td>7</td>
                             <td>
                                 Dr. K. Kesavasmy,
-                                <br/>Representative, Tata Consultancy Services
+                                <br/>Representative, 
                             </td>
                             <td>Member</td>
                         </tr>
                         <tr>
                             <td>8</td>
                             <td>
-                                Shri Pratul Shroff,
-                                <br/>CEO, E-Infochips
+                                Shri Shahid Rafi,
+                                <br/> NIT-Warangal;
                             </td>
                             <td>Member</td>
                         </tr>
                         <tr>
                             <td>9</td>
                             <td>
-                                Shri C. P. Joglekar
-                                <br/>Registrar, IIIT-Vadodara
+                                Shri prakash Raj
+                                <br/>Registrar, <IIIT-Kanpur>
                             </td>
                             <td>Secretary</td>
                         </tr>
@@ -230,10 +230,10 @@
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
-                <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+                <span class="logo"><img src="https://pbs.twimg.com/profile_images/826012789361610752/GCKMBPo7_400x400.jpg" alt=""></span>
                 <div class="row">
                     <div class="col-sm-4 address">
-                        <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028
+                        <strong>Address : </strong>Near By Buddampudi; Guntur Dist. Schools in Buddam. Mpps Buddm. Address : buddam , karlapalem , guntur , Andhra Pradesh . PIN- 522111
                     </div>
                     <div class="col-sm-4 links">
                         <div>
